--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -19,7 +19,7 @@ jobs:
       id: check_user
       run: |
         AUTHOR="${{ github.event.pull_request.user.login }}"
-        ALLOWED_USERS="EternityTQ,Cre-epbee"
+        ALLOWED_USERS="EternityTQ,Cre-epbee,RawFish69"
         if [[ $ALLOWED_USERS =~ (^|[[:space:]])$AUTHOR($|[[:space:]]) ]]; then
           echo "::set-output name=allowed::true"
         else
