--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Auto approve pull request
       if: steps.check_user.outputs.allowed == 'true'
       run: |
-        curl -X POST -H "Authorization: token ${{ secrets.nori-pr-workflow }}" \
+        curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
