--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -14,7 +14,15 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        ref: main
 
+    - name: Configure Git User
+      run: |
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+
+      
     - name: Check username
       id: check_user
       run: |
@@ -34,9 +42,12 @@ jobs:
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
 
-    - name: Push changes
+    - name: Commit changes
       run: |
-        git config --global user.name 'Your Name'
-        git config --global user.email 'your-email@example.com'
-        git commit --allow-empty -m 'Trigger Push'
-        git push
+        git add .
+        git commit -m "Commit automated by Github Actions"
+        if git diff-index --quiet HEAD --; then
+          echo "No changes to commit"
+        else
+          git push origin main
+        fi
