--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -28,19 +28,20 @@ jobs:
       run: |
         AUTHOR="${{ github.event.pull_request.user.login }}"
         ALLOWED_USERS="EternityTQ, Cre-epbee, QueenOfDemons"
+        echo "ALLOWED=false" >> $GITHUB_ENV
         if [[ $ALLOWED_USERS =~ (^|[[:space:]])$AUTHOR($|[[:space:]]) ]]; then
-          echo "::set-output name=allowed::true"
-        else
-          echo "::set-output name=allowed::false"
+          echo "ALLOWED=true" >> $GITHUB_ENV
         fi
 
+
     - name: Auto approve pull request
-      if: steps.check_user.outputs.allowed == 'true'
+      if: env.ALLOWED == 'true'
       run: |
         curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
+
 
     - name: Commit changes
       run: |
