--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Auto approve pull request
       if: env.ALLOWED == 'true'
       run: |
-        curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
