--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -37,12 +37,19 @@ jobs:
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
 
-
-    - name: Commit and push changes
+    - name: Auto approve pull request
+      if: env.ALLOWED == 'true'
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Commit automated by actions" || echo "No changes to commit"
-        git push
+        curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+             -H "Accept: application/vnd.github.v3+json" \
+             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
+             -d '{"event":"APPROVE"}'
+
+    - name: Merge pull request
+      if: env.ALLOWED == 'true'
+      run: |
+        curl -X PUT -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+             -H "Accept: application/vnd.github.v3+json" \
+             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
+             -d '{"commit_title":"Automatically merged by GitHub Actions","commit_message":"Merging approved changes","merge_method":"merge"}'
 
