--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -27,20 +27,12 @@ jobs:
         if [[ $ALLOWED_USERS =~ (^|[[:space:]])$AUTHOR($|[[:space:]]) ]]; then
           echo "ALLOWED=true" >> $GITHUB_ENV
         fi
-
-
-    - name: Auto approve pull request
-      if: env.ALLOWED == 'true'
-      run: |
-        curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
-             -H "Accept: application/vnd.github.v3+json" \
-             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
-             -d '{"event":"APPROVE"}'
+    
 
     - name: Auto approve pull request
       if: env.ALLOWED == 'true'
       run: |
-        curl -X POST -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+        curl -X POST -H "Authorization: token ${{ secrets.token }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
@@ -48,7 +40,7 @@ jobs:
     - name: Merge pull request
       if: env.ALLOWED == 'true'
       run: |
-        curl -X PUT -H "Authorization: token ${{ secrets.ACCESS_TOKEN }}" \
+        curl -X PUT -H "Authorization: token ${{ secrets.token }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
              -d '{"commit_title":"Automatically merged by GitHub Actions","commit_message":"Merging approved changes","merge_method":"merge"}'
