--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Auto approve pull request
       if: env.ALLOWED == 'true'
       run: |
-        curl -X POST -H "Authorization: token ${{ secrets.token }}" \
+        curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
@@ -40,7 +40,7 @@ jobs:
     - name: Merge pull request
       if: env.ALLOWED == 'true'
       run: |
-        curl -X PUT -H "Authorization: token ${{ secrets.token }}" \
+        curl -X PUT -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
              -d '{"commit_title":"Automatically merged by GitHub Actions","commit_message":"Merging approved changes","merge_method":"merge"}'
