--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -37,11 +37,10 @@ jobs:
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
              -d '{"event":"APPROVE"}'
 
+             
     - name: Merge pull request
-      if: env.ALLOWED == 'true'
       run: |
         curl -X PUT -H "Authorization: token ${{ secrets.NORI_TOKEN }}" \
              -H "Accept: application/vnd.github.v3+json" \
              https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
-             -d '{"commit_title":"Automatically merged by GitHub Actions","commit_message":"Merging approved changes","merge_method":"merge"}'
-
+             -d '{"merge_method":"squash"}'
