--- a/.github/workflows/auto_approve.yml
+++ b/.github/workflows/auto_approve.yml
@@ -12,35 +12,33 @@ jobs:
   auto-approve-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        ref: main
-  
-      
-    - name: Check username
-      id: check_user
-      run: |
-        AUTHOR="${{ github.event.pull_request.user.login }}"
-        ALLOWED_USERS="EternityTQ, Cre-epbee, tankofpacer"
-        echo "ALLOWED=false" >> $GITHUB_ENV
-        if [[ $ALLOWED_USERS =~ (^|[[:space:]])$AUTHOR($|[[:space:]]) ]]; then
-          echo "ALLOWED=true" >> $GITHUB_ENV
-        fi
-    
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: main
 
-    - name: Auto approve pull request
-      if: env.ALLOWED == 'true'
-      run: |
-        curl -X POST -H "Authorization: token ${{ secrets.NORI_TOKEN }}" \
-             -H "Accept: application/vnd.github.v3+json" \
-             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
-             -d '{"event":"APPROVE"}'
+      - name: Check username
+        id: check_user
+        run: |
+          AUTHOR="${{ github.event.pull_request.user.login }}"
+          ALLOWED_USERS="EternityTQ, Cre-epbee, tankofpacer"
+          echo "ALLOWED=false" >> $GITHUB_ENV
+          if [[ $ALLOWED_USERS =~ (^|[[:space:]])$AUTHOR($|[[:space:]]) ]]; then
+            echo "ALLOWED=true" >> $GITHUB_ENV
+          fi
 
-             
-    - name: Merge pull request
-      run: |
-        curl -X PUT -H "Authorization: token ${{ secrets.NORI_TOKEN }}" \
-             -H "Accept: application/vnd.github.v3+json" \
-             https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
-             -d '{"merge_method":"squash"}'
+      - name: Auto approve pull request
+        if: env.ALLOWED == 'true'
+        run: |
+          curl -X POST -H "Authorization: token ${{ secrets.NORI_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews \
+               -d '{"event":"APPROVE"}' -S -s --fail || echo "Failed to approve pull request"
+
+      - name: Merge pull request
+        if: env.ALLOWED == 'true'
+        run: |
+          curl -X PUT -H "Authorization: token ${{ secrets.NORI_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
+               -d '{"merge_method":"squash"}' -S -s --fail || echo "Failed to merge pull request"
